# SafeLens

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/app/: main.py  models.py  services.py
backend/aws/: Dockerfile  lambda_function.py
backend/lambda/: handler.py
backend/tests/: test_api.py
frontend/: App.tsx  index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: ModerationResult.tsx
